Add (very slow) attempt at using Vector api